--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     }
   ],
   "require": {
-    "deployer/dist": "^6.0",
-    "deployer/recipes": "^6.1"
+    "deployer/dist": "^6.0"
   },
   "require-dev": {
     "phpro/grumphp": "^0.14.0",
