--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "rafaelstz/deployer-magento2",
   "description": "Magento 2 deployment tool based on deployer.org",
-  "keywords": ["magento2", "deployment", "deployer", "deploy", "tool"],
-  "version": "1.0.1",
+  "keywords": ["magento2", "magento", "deployment", "deployer", "deploy", "tool"],
+  "version": "1.2.1",
   "license": [
     "MIT"
   ],
