--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,4 +1,17 @@
 parameters:
     git_dir: .
-    bin_dir: vendor/bin
-    tasks: null
+    bin_dir: ./vendor/bin
+    composer:
+        file: ./composer.json
+        no_check_all: true
+        no_check_lock: false
+        no_check_publish: false
+        with_dependencies: false
+        strict: false
+    git_blacklist:
+        keywords:
+            - "die("
+            - "var_dump("
+            - "exit;"
+            - "console.log("
+        triggered_by: ['php']
