--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     }
   ],
   "require": {
-    "deployer/dist": "^6.0"
+    "deployer/dist": "^6.0",
+    "composer/composer": "1.10.22"
   },
   "require-dev": {
     "phpro/grumphp": "^0.14.0",
