--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,14 @@
     }
   ],
   "require": {
-    "deployer/dist": "^6.0",
-    "composer/composer": "1.10.23"
+    "deployer/dist": "^6.0"
   },
   "require-dev": {
-    "phpro/grumphp": "^0.14.0",
     "phpmd/phpmd": "^2.6",
     "nikic/php-parser": "^3.1",
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.9.2",
-    "friendsofphp/php-cs-fixer": "^2.11"
+    "friendsofphp/php-cs-fixer": "^2.11",
+    "phpro/grumphp-shim": "^1.5"
   }
 }
